--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tradutor Profissional - Powered by Google Gemini AI">
-    <title>Tradutor Profissional - v2.3.2</title>
+    <title>Tradutor Profissional - v3.0.0</title>
     <link rel="stylesheet" href="styles.css?v=2.8.6">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -166,13 +166,53 @@
             <p style="color: var(--text-secondary); font-size: 1rem; margin: 0.5rem 0;">Traduções precisas e profissionais com inteligência artificial</p>
             <p style="color: var(--text-secondary); font-size: 0.85rem; margin: 0.5rem 0 2rem 0;">Desenvolvido por <strong>Nardoto</strong> | Powered by Google Gemini AI</p>
 
-            <button id="settingsButton" class="btn-primary" style="position: absolute; top: 0; right: 0; display: flex; align-items: center; gap: 0.5rem; padding: 0.75rem 1.5rem;">
-                <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-                    <path d="M10 12.5C11.3807 12.5 12.5 11.3807 12.5 10C12.5 8.61929 11.3807 7.5 10 7.5C8.61929 7.5 7.5 8.61929 7.5 10C7.5 11.3807 8.61929 12.5 10 12.5Z" stroke="currentColor" stroke-width="2"/>
-                    <path d="M16.2 12.5L15.4 13.9C15.1 14.5 15.2 15.2 15.7 15.7L16.3 16.3C16.5 16.5 16.5 16.8 16.3 17L17 17.7C17.2 17.9 17.5 17.9 17.7 17.7L18.3 17.1C18.8 16.6 19.5 16.5 20.1 16.8L21.5 17.6C21.8 17.8 22 18.1 22 18.5V19.5C22 19.8 21.8 20 21.5 20H18.5C18.2 20 18 19.8 18 19.5V18.5C18 18.1 17.8 17.8 17.5 17.6L16.1 16.8C15.5 16.5 14.8 16.6 14.3 17.1L13.7 17.7C13.5 17.9 13.2 17.9 13 17.7L12.3 17C12.1 16.8 12.1 16.5 12.3 16.3L12.9 15.7C13.4 15.2 13.5 14.5 13.2 13.9L12.4 12.5" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                </svg>
-                Configurar API Key
-            </button>
+            <!-- Botões do Header -->
+            <div style="position: absolute; top: 0; right: 0; display: flex; gap: 1rem; align-items: center;">
+                <!-- Perfil do Usuário -->
+                <div id="userProfileButton" style="display: none; cursor: pointer; background: white; border: 2px solid var(--border-color); border-radius: 50px; padding: 0.5rem 1rem; display: flex; align-items: center; gap: 0.75rem; transition: all 0.3s;">
+                    <img id="userAvatar" src="" alt="Avatar" style="width: 32px; height: 32px; border-radius: 50%; object-fit: cover;">
+                    <div style="text-align: left;">
+                        <div id="userName" style="font-weight: 600; font-size: 0.9rem; color: var(--text-primary);"></div>
+                        <div id="userPlan" style="font-size: 0.75rem; color: var(--text-secondary);"></div>
+                    </div>
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M4 6l4 4 4-4"/>
+                    </svg>
+                </div>
+
+                <!-- Configurar API Key -->
+                <button id="settingsButton" class="btn-primary" style="display: flex; align-items: center; gap: 0.5rem; padding: 0.75rem 1.5rem;">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+                        <path d="M10 12.5C11.3807 12.5 12.5 11.3807 12.5 10C12.5 8.61929 11.3807 7.5 10 7.5C8.61929 7.5 7.5 8.61929 7.5 10C7.5 11.3807 8.61929 12.5 10 12.5Z" stroke="currentColor" stroke-width="2"/>
+                        <path d="M16.2 12.5L15.4 13.9C15.1 14.5 15.2 15.2 15.7 15.7L16.3 16.3C16.5 16.5 16.5 16.8 16.3 17L17 17.7C17.2 17.9 17.5 17.9 17.7 17.7L18.3 17.1C18.8 16.6 19.5 16.5 20.1 16.8L21.5 17.6C21.8 17.8 22 18.1 22 18.5V19.5C22 19.8 21.8 20 21.5 20H18.5C18.2 20 18 19.8 18 19.5V18.5C18 18.1 17.8 17.8 17.5 17.6L16.1 16.8C15.5 16.5 14.8 16.6 14.3 17.1L13.7 17.7C13.5 17.9 13.2 17.9 13 17.7L12.3 17C12.1 16.8 12.1 16.5 12.3 16.3L12.9 15.7C13.4 15.2 13.5 14.5 13.2 13.9L12.4 12.5" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                    </svg>
+                    Configurar API Key
+                </button>
+            </div>
+        </div>
+
+        <!-- Menu Dropdown do Usuário -->
+        <div id="userDropdownMenu" style="display: none; position: absolute; top: 80px; right: 2rem; background: white; border: 2px solid var(--border-color); border-radius: var(--radius-sm); box-shadow: 0 8px 24px rgba(0,0,0,0.15); min-width: 280px; z-index: 1000;">
+            <div style="padding: 1rem; border-bottom: 1px solid var(--border-color);">
+                <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 0.5rem;">Uso de Hoje</div>
+                <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 0.5rem;">
+                    <div style="flex: 1; height: 8px; background: var(--bg-hover); border-radius: 10px; overflow: hidden;">
+                        <div id="usageBar" style="height: 100%; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); width: 0%; transition: width 0.3s;"></div>
+                    </div>
+                </div>
+                <div style="font-size: 0.85rem; color: var(--text-secondary);">
+                    <span id="translationsUsed" style="font-weight: 600; color: var(--accent-primary);">0</span> / 10 traduções
+                </div>
+            </div>
+
+            <div style="padding: 0.5rem;">
+                <button id="upgradeButton" class="btn-primary" style="width: 100%; margin-bottom: 0.5rem; justify-content: center;">
+                    ⭐ Upgrade para PRO
+                </button>
+                <button id="logoutButton" class="btn-secondary" style="width: 100%; justify-content: center;">
+                    🚪 Sair
+                </button>
+            </div>
         </div>
 
         <!-- Banner Informativo -->
@@ -508,7 +548,88 @@
     <!-- Toast Notification -->
     <div id="toast" class="toast"></div>
 
+    <!-- Login Screen -->
+    <div id="loginScreen" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); z-index: 9999; display: flex; align-items: center; justify-content: center;">
+        <div style="background: white; border-radius: var(--radius-md); padding: 3rem; max-width: 480px; width: 90%; box-shadow: 0 20px 60px rgba(0,0,0,0.3);">
+            <div style="text-align: center; margin-bottom: 2rem;">
+                <h1 style="font-size: 2rem; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; margin-bottom: 0.5rem;">
+                    🌐 Tradutor Profissional AI
+                </h1>
+                <p style="color: var(--text-secondary); font-size: 0.95rem;">
+                    Faça login para começar a traduzir
+                </p>
+            </div>
+
+            <div style="background: linear-gradient(135deg, #667eea11 0%, #764ba211 100%); padding: 1.5rem; border-radius: var(--radius-sm); margin-bottom: 2rem;">
+                <h3 style="color: var(--accent-primary); margin: 0 0 1rem 0; font-size: 1rem; text-align: center;">
+                    ✨ Plano GRATUITO Inclui:
+                </h3>
+                <ul style="margin: 0; padding-left: 1.5rem; color: var(--text-secondary); font-size: 0.9rem; line-height: 1.8;">
+                    <li><strong>10 traduções por dia</strong> com IA Google Gemini</li>
+                    <li><strong>Exportar TXT e SRT</strong> (legendas para vídeos)</li>
+                    <li><strong>Auto-detectar idiomas</strong> automaticamente</li>
+                    <li><strong>Traduções profissionais</strong> ilimitadas em caracteres</li>
+                </ul>
+            </div>
+
+            <button id="googleLoginButton" class="btn-primary" style="width: 100%; padding: 1rem; font-size: 1rem; display: flex; align-items: center; justify-content: center; gap: 0.75rem; margin-bottom: 1rem;">
+                <svg width="24" height="24" viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/>
+                    <path fill="currentColor" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/>
+                    <path fill="currentColor" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"/>
+                    <path fill="currentColor" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/>
+                </svg>
+                Entrar com Google
+            </button>
+
+            <p style="text-align: center; color: var(--text-secondary); font-size: 0.85rem; margin: 1.5rem 0 0 0;">
+                Ao fazer login, você concorda com nossos termos de uso
+            </p>
+        </div>
+    </div>
+
+    <!-- Scripts Firebase -->
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
+        import { getAuth, signInWithPopup, GoogleAuthProvider, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
+        import { getFirestore, doc, getDoc, setDoc, updateDoc, increment } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
+
+        // IMPORTANTE: Você precisa criar um projeto Firebase e substituir essa configuração
+        // Acesse: https://console.firebase.google.com
+        const firebaseConfig = {
+            apiKey: "SUA_API_KEY_AQUI",
+            authDomain: "seu-projeto.firebaseapp.com",
+            projectId: "seu-projeto-id",
+            storageBucket: "seu-projeto.appspot.com",
+            messagingSenderId: "123456789",
+            appId: "1:123456789:web:abcdef123456"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const db = getFirestore(app);
+        const provider = new GoogleAuthProvider();
+
+        // Disponibilizar globalmente
+        window.firebaseAuth = auth;
+        window.firebaseDb = db;
+        window.firebaseProvider = provider;
+        window.firebaseSignInWithPopup = signInWithPopup;
+        window.firebaseOnAuthStateChanged = onAuthStateChanged;
+        window.firebaseSignOut = signOut;
+        window.firebaseDoc = doc;
+        window.firebaseGetDoc = getDoc;
+        window.firebaseSetDoc = setDoc;
+        window.firebaseUpdateDoc = updateDoc;
+        window.firebaseIncrement = increment;
+
+        console.log('🔥 Firebase initialized');
+    </script>
+
     <!-- Scripts -->
-    <script src="translator.js?v=2.3.2"></script>
+    <script src="auth.js?v=3.0.0"></script>
+    <script src="translator.js?v=3.0.0"></script>
 </body>
 </html>
