Corrigir login admin usando redirect ao invés de popup (resolver CORS)

--- a/admin.html
+++ b/admin.html
@@ -365,7 +365,7 @@
     <!-- Firebase SDK -->
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
-        import { getAuth, signInWithPopup, GoogleAuthProvider, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
+        import { getAuth, signInWithRedirect, getRedirectResult, GoogleAuthProvider, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
         import { getFirestore, collection, getDocs, doc, updateDoc, query, where } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
 
         const firebaseConfig = {
@@ -388,7 +388,8 @@
         window.firebaseAuth = auth;
         window.firebaseDb = db;
         window.firebaseProvider = provider;
-        window.firebaseSignInWithPopup = signInWithPopup;
+        window.firebaseSignInWithRedirect = signInWithRedirect;
+        window.firebaseGetRedirectResult = getRedirectResult;
         window.firebaseOnAuthStateChanged = onAuthStateChanged;
         window.firebaseSignOut = signOut;
         window.firebaseCollection = collection;
