--- a/admin.html
+++ b/admin.html
@@ -403,7 +403,7 @@
 
         // Carregar admin.js depois que Firebase estiver pronto
         const script = document.createElement('script');
-        script.src = 'admin.js';
+        script.src = 'admin.js?v=2.0.0'; // Versão 2.0.0 - Forçar atualização
         document.body.appendChild(script);
     </script>
 </body>
