--- a/admin.html
+++ b/admin.html
@@ -400,7 +400,7 @@
 
         // Carregar admin.js depois que Firebase estiver pronto
         const script = document.createElement('script');
-        script.src = 'admin.js?v=3.0.0'; // Versão 3.0.0 - Múltiplos admins
+        script.src = 'admin.js?v=4.0.0'; // Versão 4.0.0 - Corrigir loop de redirect
         document.body.appendChild(script);
     </script>
 </body>
