--- a/index.html
+++ b/index.html
@@ -156,6 +156,19 @@
                 grid-template-columns: 1fr;
             }
         }
+
+        /* Dropdown arrow animation */
+        details summary span:first-child {
+            transition: transform 0.2s;
+        }
+
+        details[open] summary span:first-child {
+            transform: rotate(90deg);
+        }
+
+        details summary::-webkit-details-marker {
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -215,40 +228,6 @@
             </div>
         </div>
 
-        <!-- Banner Informativo -->
-        <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border-radius: var(--radius-sm); padding: 1.5rem; margin-bottom: 2rem; color: white; box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);">
-            <h3 style="margin: 0 0 1rem 0; display: flex; align-items: center; gap: 0.5rem; font-size: 1.2rem;">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <circle cx="12" cy="12" r="10"/>
-                    <path d="M12 16v-4M12 8h.01"/>
-                </svg>
-                Como usar o Tradutor Profissional AI
-            </h3>
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1rem; font-size: 0.9rem;">
-                <div style="background: rgba(255,255,255,0.15); padding: 1rem; border-radius: var(--radius-sm); backdrop-filter: blur(10px);">
-                    <div style="font-weight: 600; margin-bottom: 0.5rem; display: flex; align-items: center; gap: 0.5rem;">
-                        <span style="background: white; color: #667eea; width: 24px; height: 24px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 0.85rem; font-weight: bold;">1</span>
-                        Escreva ou cole seu texto
-                    </div>
-                    <p style="margin: 0; opacity: 0.95; line-height: 1.5;">Digite ou cole o texto que deseja traduzir no campo à esquerda. Pode ser um roteiro, artigo, legenda ou qualquer texto.</p>
-                </div>
-                <div style="background: rgba(255,255,255,0.15); padding: 1rem; border-radius: var(--radius-sm); backdrop-filter: blur(10px);">
-                    <div style="font-weight: 600; margin-bottom: 0.5rem; display: flex; align-items: center; gap: 0.5rem;">
-                        <span style="background: white; color: #667eea; width: 24px; height: 24px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 0.85rem; font-weight: bold;">2</span>
-                        Selecione o idioma e traduza
-                    </div>
-                    <p style="margin: 0; opacity: 0.95; line-height: 1.5;">Escolha o idioma de destino e clique em "Traduzir". A IA Google Gemini fará uma tradução profissional em segundos.</p>
-                </div>
-                <div style="background: rgba(255,255,255,0.15); padding: 1rem; border-radius: var(--radius-sm); backdrop-filter: blur(10px);">
-                    <div style="font-weight: 600; margin-bottom: 0.5rem; display: flex; align-items: center; gap: 0.5rem;">
-                        <span style="background: white; color: #667eea; width: 24px; height: 24px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 0.85rem; font-weight: bold;">3</span>
-                        Exporte como TXT ou SRT
-                    </div>
-                    <p style="margin: 0; opacity: 0.95; line-height: 1.5;">Após traduzir, exporte como arquivo TXT (texto simples) ou SRT (legenda com timestamps) para usar em vídeos!</p>
-                </div>
-            </div>
-        </div>
-
         <!-- Controls -->
         <div class="controls">
             <select id="sourceLangSelector" class="root-folder-dropdown" style="flex: 1; max-width: 250px;">
@@ -294,6 +273,18 @@
 
             <button id="clearButton" class="btn-secondary">
                 🗑️ Limpar
+            </button>
+
+            <button id="settingsButton" class="btn-primary" style="display: flex; align-items: center; gap: 0.5rem; padding: 0.75rem 1.5rem;">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+                    <path d="M10 12.5C11.3807 12.5 12.5 11.3807 12.5 10C12.5 8.61929 11.3807 7.5 10 7.5C8.61929 7.5 7.5 8.61929 7.5 10C7.5 11.3807 8.61929 12.5 10 12.5Z" stroke="currentColor" stroke-width="2"/>
+                    <path d="M16.2 12.5L15.4 13.9C15.1 14.5 15.2 15.2 15.7 15.7L16.3 16.3C16.5 16.5 16.5 16.8 16.3 17L17 17.7C17.2 17.9 17.5 17.9 17.7 17.7L18.3 17.1C18.8 16.6 19.5 16.5 20.1 16.8L21.5 17.6C21.8 17.8 22 18.1 22 18.5V19.5C22 19.8 21.8 20 21.5 20H18.5C18.2 20 18 19.8 18 19.5V18.5C18 18.1 17.8 17.8 17.5 17.6L16.1 16.8C15.5 16.5 14.8 16.6 14.3 17.1L13.7 17.7C13.5 17.9 13.2 17.9 13 17.7L12.3 17C12.1 16.8 12.1 16.5 12.3 16.3L12.9 15.7C13.4 15.2 13.5 14.5 13.2 13.9L12.4 12.5" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                </svg>
+                Configurar API Key
+            </button>
+
+            <button id="helpButton" class="btn-secondary" style="padding: 0.5rem 0.75rem; min-width: auto;" title="Como usar">
+                ❓
             </button>
         </div>
 
@@ -432,49 +423,35 @@
                 <button class="modal-close" onclick="document.getElementById('settingsModal').style.display='none'">&times;</button>
             </div>
             <div class="modal-body">
-                <!-- Lista de API Keys Cadastradas -->
-                <div style="margin-bottom: 2rem;">
+                <!-- Configuração de API Key -->
+                <div style="margin-bottom: 1.5rem;">
                     <h3 style="color: var(--accent-primary); margin: 0 0 1rem 0; font-size: 1.1rem;">
-                        🔑 API Keys Cadastradas
-                    </h3>
-                    <div id="apiKeysList" style="max-height: 300px; overflow-y: auto;">
-                        <!-- Lista será renderizada aqui pelo JavaScript -->
-                    </div>
-                </div>
-
-                <!-- Adicionar Nova API Key -->
-                <div style="margin-bottom: 1.5rem; padding: 1.5rem; background: var(--bg-hover); border-radius: var(--radius-sm); border: 2px solid var(--border-color);">
-                    <h3 style="color: var(--accent-primary); margin: 0 0 1rem 0; font-size: 1rem;">
-                        ➕ Adicionar Nova API Key
+                        🔑 API Key do Google Gemini
                     </h3>
 
                     <div style="margin-bottom: 1rem;">
-                        <label style="display: block; margin-bottom: 0.5rem; font-weight: 500; font-size: 0.9rem;">
-                            Nome (Identificação)
-                        </label>
-                        <input
-                            type="text"
-                            id="newApiKeyName"
-                            placeholder="Ex: Minha Key Principal, Key Backup..."
-                            style="width: 100%; padding: 0.75rem; border: 2px solid var(--border-color); border-radius: var(--radius-sm);"
-                        >
-                    </div>
-
-                    <div style="margin-bottom: 1rem;">
-                        <label style="display: block; margin-bottom: 0.5rem; font-weight: 500; font-size: 0.9rem;">
-                            API Key do Google Gemini
-                        </label>
                         <input
                             type="password"
                             id="newApiKeyInput"
                             placeholder="Cole sua API Key aqui..."
-                            style="width: 100%; padding: 0.75rem; border: 2px solid var(--border-color); border-radius: var(--radius-sm); font-family: 'Courier New', monospace;"
+                            style="width: 100%; padding: 0.75rem; border: 2px solid var(--border-color); border-radius: var(--radius-sm); font-family: 'Courier New', monospace; font-size: 0.95rem;"
                         >
                     </div>
-                    <div style="margin-top: 1rem; padding: 1rem; background: linear-gradient(135deg, #667eea11 0%, #764ba211 100%); border-left: 3px solid var(--accent-primary); border-radius: var(--radius-sm);">
-                        <h4 style="margin: 0 0 0.75rem 0; color: var(--accent-primary); font-size: 0.95rem; display: flex; align-items: center; gap: 0.5rem;">
-                            📚 Como obter sua API Key GRATUITA:
-                        </h4>
+
+                    <div style="display: flex; gap: 0.75rem; margin-bottom: 1rem;">
+                        <button id="saveApiKeyButton" class="btn-primary" style="flex: 1;">
+                            💾 Salvar
+                        </button>
+                        <button id="testApiKeyButton" class="btn-secondary" style="flex: 1;">
+                            🧪 Testar
+                        </button>
+                    </div>
+
+                    <details style="margin-top: 1rem; padding: 1rem; background: linear-gradient(135deg, #667eea11 0%, #764ba211 100%); border-left: 3px solid var(--accent-primary); border-radius: var(--radius-sm); cursor: pointer;">
+                        <summary style="list-style: none; font-weight: 600; color: var(--accent-primary); font-size: 0.95rem; display: flex; align-items: center; gap: 0.5rem; user-select: none;">
+                            <span style="transition: transform 0.2s;">▶</span>
+                            📚 Como obter sua API Key GRATUITA
+                        </summary>
 
                         <div style="background: #fff; padding: 1rem; border-radius: var(--radius-sm); margin-bottom: 1rem; border: 1px solid var(--border-color);">
                             <ol style="margin: 0; padding-left: 1.5rem; font-size: 0.85rem; color: var(--text-primary); line-height: 2;">
@@ -516,30 +493,7 @@
                                 <strong>💡 Dica:</strong> Essa chave permite traduzir arquivos inteiros de uma só vez usando o poder da IA Google Gemini!
                             </p>
                         </div>
-                    </div>
-
-                    <div style="display: flex; gap: 0.75rem; margin-top: 1rem;">
-                        <button id="saveApiKeyButton" class="btn-primary" style="flex: 1;">
-                            ➕ Adicionar Key
-                        </button>
-                        <button id="testApiKeyButton" class="btn-secondary" style="flex: 1;">
-                            🧪 Testar Key em Uso
-                        </button>
-                    </div>
-                </div>
-
-                <!-- Informações sobre Múltiplas Keys -->
-                <div style="margin-top: 1.5rem; padding: 1rem; background: linear-gradient(135deg, #667eea11 0%, #764ba211 100%); border-radius: var(--radius-sm); border-left: 3px solid #667eea;">
-                    <h4 style="margin: 0 0 0.75rem 0; color: #667eea; font-size: 0.95rem;">
-                        🔄 Sistema de Múltiplas API Keys
-                    </h4>
-                    <ul style="margin: 0; padding-left: 1.5rem; font-size: 0.85rem; color: var(--text-secondary); line-height: 1.8;">
-                        <li>Adicione <strong>várias API Keys</strong> para evitar limites de uso</li>
-                        <li>O sistema <strong>roda automaticamente</strong> para próxima key se uma atingir o limite</li>
-                        <li>Todas as keys são <strong>salvas localmente</strong> no seu navegador</li>
-                        <li>A key <strong>"EM USO"</strong> indica qual está sendo utilizada no momento</li>
-                        <li>Cada API gratuita permite <strong>~60 requisições por minuto</strong></li>
-                    </ul>
+                    </details>
                 </div>
             </div>
         </div>
