--- a/index.html
+++ b/index.html
@@ -193,6 +193,11 @@
                     </svg>
                 </div>
 
+                <!-- Botão Configurar API -->
+                <button id="settingsButton" class="btn-primary" style="display: flex; align-items: center; gap: 0.5rem; padding: 0.75rem 1rem;">
+                    ⚙️ Configurar
+                </button>
+
                 <!-- Botão de Ajuda -->
                 <button id="helpButton" class="btn-secondary" style="display: flex; align-items: center; gap: 0.5rem; padding: 0.75rem 1rem; font-size: 1.25rem;" title="Como usar">
                     ❓
@@ -497,6 +502,50 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+    </div>
+
+    <!-- Settings Modal -->
+    <div id="settingsModal" class="modal" style="display: none;">
+        <div class="modal-content" style="max-width: 500px;">
+            <div class="modal-header">
+                <h2>⚙️ Configurar API Key</h2>
+                <button class="modal-close" onclick="document.getElementById('settingsModal').style.display='none'">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div style="margin-bottom: 1rem;">
+                    <label style="display: block; margin-bottom: 0.5rem; font-weight: 600; color: var(--text-primary);">
+                        🔑 Google Gemini API Key
+                    </label>
+                    <input
+                        type="password"
+                        id="newApiKeyInput"
+                        placeholder="Cole sua API Key aqui..."
+                        style="width: 100%; padding: 0.75rem; border: 2px solid var(--border-color); border-radius: var(--radius-sm); font-family: 'Courier New', monospace; font-size: 0.95rem;"
+                    >
+                </div>
+
+                <div style="display: flex; gap: 0.75rem; margin-bottom: 1.5rem;">
+                    <button id="saveApiKeyButton" class="btn-primary" style="flex: 1;">
+                        💾 Salvar
+                    </button>
+                    <button id="testApiKeyButton" class="btn-secondary" style="flex: 1;">
+                        🧪 Testar
+                    </button>
+                </div>
+
+                <div style="background: linear-gradient(135deg, #667eea11 0%, #764ba211 100%); padding: 1rem; border-radius: var(--radius-sm); border-left: 3px solid var(--accent-primary);">
+                    <p style="margin: 0 0 0.5rem 0; font-weight: 600; color: var(--accent-primary); font-size: 0.9rem;">
+                        📚 Como obter (GRÁTIS):
+                    </p>
+                    <ol style="margin: 0; padding-left: 1.5rem; font-size: 0.85rem; line-height: 1.7; color: var(--text-primary);">
+                        <li>Acesse: <a href="https://makersuite.google.com/app/apikey" target="_blank" style="color: var(--accent-primary);">Google AI Studio</a></li>
+                        <li>Faça login com sua conta Google</li>
+                        <li>Clique em "Criar chave de API"</li>
+                        <li>Copie a chave e cole acima</li>
+                    </ol>
+                </div>
             </div>
         </div>
     </div>
