--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <p style="color: var(--text-secondary); font-size: 0.75rem; margin: 0.25rem 0 0 0;">Desenvolvido por <strong>Nardoto</strong> | Powered by Groq & Gemini</p>
 
             <!-- Perfil do Usuário -->
-            <div style="position: absolute; top: 1rem; right: 0;">
+            <div style="position: absolute; top: 0; right: 0;">
                 <!-- Botão de Login (visível quando NÃO está logado) -->
                 <button id="googleLoginButton" class="google-login-btn" style="display: none; cursor: pointer; background: white; border: 2px solid var(--border-color); border-radius: 50px; padding: 0.5rem 1rem; align-items: center; gap: 0.75rem; transition: all 0.3s; font-size: 0.9rem; font-weight: 600;">
                     <svg width="18" height="18" viewBox="0 0 18 18" style="vertical-align: middle;">
