--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="translator-header" style="position: relative; max-height: 50px; padding: 1rem 0;">
             <h1 style="margin-bottom: 0.25rem; font-size: 2rem;">🌐 Tradutor Profissional AI</h1>
             <p style="color: var(--text-secondary); font-size: 0.9rem; margin: 0.25rem 0;">Traduções precisas e profissionais com inteligência artificial</p>
-            <p style="color: var(--text-secondary); font-size: 0.75rem; margin: 0.25rem 0 0 0;">Desenvolvido por <strong>Nardoto</strong> | Powered by Groq & Gemini</p>
+            <p style="color: var(--text-secondary); font-size: 0.75rem; margin: 0.25rem 0 0 0;">Desenvolvido por <strong>Nardoto</strong> | Powered by Groq & Gemini | <span style="background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 600;">v3.0.1</span></p>
 
             <!-- Perfil do Usuário -->
             <div style="position: absolute; top: 0; right: 0;">
