--- a/index.html
+++ b/index.html
@@ -12,22 +12,20 @@
     <style>
         .translator-container {
             max-width: 1400px;
-            margin: 2rem auto;
+            margin: 0.5rem auto 2rem auto;
             padding: 0 2rem;
         }
 
         .translator-header {
             text-align: center;
-            margin-bottom: 2rem;
+            margin-bottom: 1rem;
         }
 
         .translator-header h1 {
-            font-size: 2.5rem;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            margin-bottom: 0.5rem;
+            font-size: 1.5rem;
+            color: #1a1a1a;
+            font-weight: 700;
+            margin: 0;
         }
 
         .translator-grid {
@@ -191,9 +189,9 @@
 <body>
     <!-- Main Content -->
     <div class="translator-container">
-        <div class="translator-header" style="position: relative; max-height: 50px; padding: 0.5rem 0; padding-right: 200px;">
-            <h1 style="margin: 0; font-size: 1.5rem; color: #1a1a1a; font-weight: 700;">🌐 Tradutor Profissional AI</h1>
-            <p style="color: var(--text-secondary); font-size: 0.75rem; margin: 0.25rem 0 0 0;">Desenvolvido por <strong>Nardoto</strong> | Powered by Groq & Gemini | <span style="color: #6366f1; font-weight: 600;">v3.0.1</span></p>
+        <div class="translator-header" style="position: relative; max-height: 50px; padding: 0.25rem 0; padding-right: 200px;">
+            <h1 style="margin: 0; font-size: 1.3rem; color: #1a1a1a; font-weight: 700;">🌐 Tradutor Profissional AI</h1>
+            <p style="color: var(--text-secondary); font-size: 0.7rem; margin: 0.15rem 0 0 0;">Desenvolvido por <strong>Nardoto</strong> | Powered by Groq & Gemini | <span style="color: #6366f1; font-weight: 600;">v3.0.2</span></p>
 
             <!-- Perfil do Usuário -->
             <div style="position: absolute; top: 0; right: 0;">
