--- a/index.html
+++ b/index.html
@@ -190,7 +190,10 @@
     <!-- Main Content -->
     <div class="translator-container">
         <div class="translator-header" style="position: relative; max-height: 50px; padding: 0.25rem 0; padding-right: 200px;">
-            <h1 style="margin: 0; font-size: 1.3rem; color: #1a1a1a; font-weight: 700;">🌐 Tradutor Profissional AI</h1>
+            <h1 style="margin: 0; font-size: 1.3rem; color: #1a1a1a; font-weight: 700; display: flex; align-items: center; gap: 0.5rem;">
+                <img src="logo-nardoto.png" alt="Nardoto Logo" style="height: 32px; width: 32px; object-fit: contain;">
+                Tradutor Profissional AI
+            </h1>
             <p style="color: var(--text-secondary); font-size: 0.7rem; margin: 0.15rem 0 0 0;">Desenvolvido por <strong>Nardoto</strong> | Powered by Groq & Gemini | <span style="color: #6366f1; font-weight: 600;">v3.0.2</span></p>
 
             <!-- Perfil do Usuário -->
