--- a/admin.html
+++ b/admin.html
@@ -403,7 +403,7 @@
 
         // Carregar admin.js depois que Firebase estiver pronto
         const script = document.createElement('script');
-        script.src = 'admin.js?v=6.2.0'; // Versão 6.2.0 - Teste grátis 3 dias
+        script.src = 'admin.js?v=6.3.0'; // Versão 6.3.0 - Fix data + Ordenação
         document.body.appendChild(script);
     </script>
 </body>
